--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,15 @@ body {
     text-wrap: balance;
   }
 }
+
+@font-face {
+  font-family: 'MyFont';
+  src: url('/path/to/font.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+body {
+  font-family: 'MyFont', sans-serif;
+}
