--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,9 @@
 }
 
 body {
+  position: relative;
+  margin: 0px;
+  padding: 0px;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -24,6 +27,10 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+* {
+  box-sizing: border-box;
 }
 
 @layer utilities {
